@@ -5394,9 +5394,8 @@ void define_md_data_raw()
         GOUT( "trans_field" ),
         GOUT_TYPE( "Tensor3" ),
         GOUT_DESC( "Dimensions: [f_grid,p_grid,scat_za_grid]. See further above." ),
-        IN( "propmat_clearsky_agenda", "iy_main_agenda", "iy_space_agenda",
-            "iy_surface_agenda", "iy_cloudbox_agenda",
-            "stokes_dim", "f_grid", "atmosphere_dim",
+        IN( "propmat_clearsky_agenda", "iy_space_agenda", "iy_surface_agenda",
+            "iy_cloudbox_agenda", "stokes_dim", "f_grid", "atmosphere_dim",
             "p_grid", "z_field", "t_field", "nlte_field", "vmr_field", "abs_species",
             "wind_u_field", "wind_v_field", "wind_w_field",
             "mag_u_field", "mag_v_field", "mag_w_field",
