@@ -1,3 +1,11 @@
+2018-03-28  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
+	* arts-2-3-1000
+
+	* src/m_radiation_field.cc (doit_i_fieldClearskyPlaneParallel):
+	iy_main_agenda given to iyEmissionStandard etc. is now defined
+	inside the method. 
+
 2018-03-28  Oliver Lemke  <olemke@core-dump.info>
 
 	* arts-2-3-999
